Updated a dashboard a bit

--- a/Teacher/Menu/dashboard.html
+++ b/Teacher/Menu/dashboard.html
@@ -34,6 +34,33 @@
                 <a href="../login.html" class="back-button">&#8592;</a>
             </nav>
         <h1 class="dashboard">Dashboard</h1>
+
+
+        <h2 class="recent-text">Recent</h2>
+        <div class="Recent">
+            <div class="recent-card">
+
+            </div>
+        </div>
+
+        <h2 class="summary-text">Summary</h2>
+        <div class="Summary">
+            <div class="summary-item">
+                <h3>Total Students</h3>
+                <div class="students-card">
+                </div>
+            </div>
+            <div class="summary-item">
+                <h3>Total Subjects</h3>
+                <div class="subjects-card">
+                </div>
+            </div>
+            <div class="summary-item">
+                <h3>Total Activities</h3>
+                <div class="activities-card">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
