--- a/landing-page.html
+++ b/landing-page.html
@@ -11,6 +11,6 @@
     <h1>Pick your role</h1>
 
     <a href="Teacher/login.html">Teacher</a><br>
-    <a>Student</a>
+    <a>Students</a>
 </body>
 </html>
