fixed side menu displays

--- a/Teacher/Menu/dashboard.html
+++ b/Teacher/Menu/dashboard.html
@@ -7,6 +7,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/dashboard.css">
+    <link rel="stylesheet" href="Styles/side_menu.css">
     <title>Dashboard</title>
     <script src="../Scripts/main.js"></script>
     <script src="shared_components/side_menu.js"></script>
