--- a/Teacher/Menu/subjects.html
+++ b/Teacher/Menu/subjects.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="Styles/subjects.css">
+    <link rel="stylesheet" href="Styles/side_menu.css">
+    <script src="shared_components/side_menu.js"></script>
+    <script src="../Scripts/main.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subjects</title>
 </head>
 <body>
+    <div id="sidebar"></div>
+    <script>
+        side_menubar("sidebar");
+    </script>
     <h1 class="header">Subjects</h1>
 </body>
 </html>
