--- a/Teacher/Menu/dashboard.html
+++ b/Teacher/Menu/dashboard.html
@@ -21,7 +21,7 @@
         <h1 class="dashboard">Dashboard</h1>
 
 
-        <h2 class="recent-text">Recent</h2>
+        <h2 class="recent-text">Recents</h2>
         <div class="Recent">
             <div class="recent-card">
 
